<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DepartmentFragment" >

    <LinearLayout
        android:layout_width="426dp"
        android:layout_height="339dp"
        android:gravity="center|bottom"
        android:weightSum="4"
        tools:layout_editor_absoluteX="-9dp"
        tools:layout_editor_absoluteY="360dp">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/buttonSelect2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_toRightOf="@+id/buttonCancel"
            android:layout_weight="1"
            android:text="@string/select"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/departmentGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioCompSci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comp_sci"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioInfoSys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_sys"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioBioInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioDataSci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_sci"
            android:textSize="16sp" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>